--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=Tournoi_Project
 spring.datasource.url=jdbc:postgresql://localhost:5432/EsportTournament
 spring.datasource.password=root
 spring.datasource.username=clarel
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.show_sql=true
 
 # Configuration des chemins
